# rauthy-totp

./: .gitignore  README.md  angular.json  package-lock.json  package.json  snapcraft.yaml
.github/workflows/: android.yml  main.yml  snapcraft.yml
src/: app-tailwind.css  index.html  styles.scss
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: biometric.rs  brandfetch.rs  commands.rs  crypto.rs  desktop.rs  lib.rs  main.rs  state.rs  storage.rs  totp.rs
src/app/: app.component.html  app.component.scss  app.component.ts  app.config.ts  app.routes.ts  app.theme.ts
src/app/license/: license.component.html
src/app/main/: main.component.html  main.component.scss  main.component.ts
src/app/main/service-add/: service-add.component.html  service-add.component.scss  service-add.component.ts
src/app/main/service-delete/: service-delete.component.html  service-delete.component.ts
src/app/main/service-edit/: service-edit.component.html  service-edit.component.ts
src/app/main/service-item/: service-item.component.html  service-item.component.spec.ts  service-item.component.ts
src/app/main/service-list/: service-list.component.html  service-list.component.scss  service-list.component.ts
src/app/models/: service.model.ts  token.model.ts
src/app/services/: local-storage.service.ts  totp.service.ts
src/app/utils/: platform.ts
src/app/version/: version.component.html
src/assets/i18n/: en.json  pt-BR.json
