[package]
name = "rauthy"
version = "0.0.7"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rauthy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "test"] }
tauri-plugin-fs = "2"
totp-rs = { version = "5.6.0", features = ["zeroize", "otpauth", "serde_support"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2.5.4"
ring = "0.17.13"
data-encoding = "2.8.0"
rand = "0.8.5"
aes = "0.8.4"
block-modes = "0.9.1"
bincode = "1.3.3"
aes-gcm = "0.10.3"
minreq = { version = "2.13.2", features = ["https"] }
tauri-plugin-stronghold = "2"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2"
tauri-plugin-biometric = { git = "https://github.com/charlesschaefer/tauri-plugins-workspace.git", branch = "v2" }

#[build]
